<resources>
    <string name="app_name">畅看视频</string>
    <string name="action_settings">Settings</string>
    <string name="tencent">腾讯视频</string>
    <string name="aqiyi">爱奇艺视频</string>
    <string name="sohu">搜狐视频</string>
    <string name="youku">优酷视频</string>
    <string name="mgtv">芒果Tv</string>
    <string name="leshitv">乐视视频</string>
    <!-- url -->
    <string name="tencent_url">https://3g.v.qq.com/</string>
    <string name="aqiyi_url">https://m.iqiyi.com/</string>
    <string name="sohu_url">https://m.tv.sohu.com/</string>
    <string name="youku_url">https://youku.com/</string>
    <string name="mgtv_url">https://m.mgtv.com/</string>
    <string name="leshitv_url">http://m.le.com/</string>
    <string name="js_video">解析视频</string>
    <string name="line1">线 路 1</string>
    <string name="line2">线 路 2</string>
    <string name="line3">线 路 3</string>
    <string name="line4">线 路 4</string>
    <string name="line5">线 路 5</string>
    <string name="line6">线 路 6</string>
    <string name="line7">线 路 7</string>
    <string name="line8">线 路 8</string>
    <string name="line9">线 路 9</string>
    <string name="line10">线 路 10</string>
    <string name="net_error">网络连接失败，请检查网络</string>
    <string name="line_qh">请切换路线或者稍后重试</string>
    <string name="loading">加载更多</string>
    <string name="error_line">暂未找到视频,请尝试切换路线</string>

    <!--阿里 -->
    <string name="alivc_screen_costting">正在投屏中...</string>
    <string name="alivc_screen_cost_exit">退出投屏</string>
    <string name="alivc_speed_one_times">正常</string>
    <string name="alivc_speed_optf_times">1.25倍速</string>
    <string name="alivc_speed_opt_times">1.5倍速</string>
    <string name="alivc_speed_twice_times">2.0倍速</string>
    <string name="alivc_speed_mode">倍速播放</string>
    <string name="alivc_speed_tips">当前视频已切换为%1$s播放</string>
    <string name="alivc_left_side">左侧</string>
    <string name="alivc_brightness">亮度</string>
    <string name="alivc_control">调节</string>
    <string name="alivc_center">中心</string>
    <string name="alivc_progress">进度</string>
    <string name="alivc_right_side">右侧</string>
    <string name="alivc_volume">音量</string>
    <string name="slivc_not_support_url">不支持Url播放类型下载...</string>
    <string name="alivc_loading">视频加载中..</string>

    <!--quality-->
    <string name="alivc_fd_definition">流畅</string>
    <string name="alivc_ld_definition">标清</string>
    <string name="alivc_sd_definition">高清</string>
    <string name="alivc_hd_definition">超清</string>
    <string name="alivc_k2_definition">2k</string>
    <string name="alivc_k4_definition">4k</string>
    <string name="alivc_od_definition">原画</string>

    <!--mts-->
    <string name="alivc_mts_xld_definition">极速</string>
    <string name="alivc_mts_ld_definition">流畅</string>
    <string name="alivc_mts_sd_definition">标清</string>
    <string name="alivc_mts_fhd_definition">超清</string>
    <string name="alivc_mts_hd_definition">高清</string>

    <string name="alivc_error_msg">错误消息</string>
    <string name="alivc_error_code">错误码:</string>
    <string name="alivc_retry">重试</string>
    <string name="alivc_net_state_mobile">当前为移动网络，请点击播放</string>
    <string name="alivc_net_state_mobile_yes">继续播放</string>
    <string name="alivc_net_state_mobile_no">退出播放</string>
    <string name="alivc_alivc_replay_msg">视频播放结束</string>
    <string name="alivc_replay">重播</string>
    <string name="alivc_speed">倍速播放</string>
    <string name="back_ana">解析失败,请返回重新解析</string>
    <string name="requst_error">请求失败,切换其他线路试试</string>
    <string name="brow">如果加载过慢,请返回重新解析</string>
    <string name="login_ts">取一个昵称吧</string>
    <string name="login_edt">昵称不能为空</string>
    <string name="search">搜索或网址</string>
    <string name="sear_wz">网址</string>
    <string name="sear_video">短视频</string>
    <string name="sear_db">百度</string>
    <string name="sear_ssrx">实时热讯</string>
    <string name="abount">关于程序</string>
    <string name="new_yd">新手引导</string>
    <string name="share">分享好友</string>
    <string name="about">本程序的任何功能、排版、图标或设计等，如果无意中侵犯了您的权益，请提交相关的证明材料联系作者予以
    更正!如果您对本程序有任何建议，亦可通过邮箱反馈给作者。</string>
    <string name="faback">反馈邮箱:   z643348353@163.com</string>
    <string name="login_out">退出登录</string>
    <string name="load">正在加载,请稍等...</string>
    <string name="hint_msg">请输入影视、剧集、电影</string>
    <string name="data_error">请求失败</string>

</resources>
