<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <zd.cn.novipvideo.view.ImageTitleBar
        android:id="@+id/fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </zd.cn.novipvideo.view.ImageTitleBar>

    <TextView
        android:id="@+id/fragment_tv"
        android:text="Hello"
        android:gravity="center"
        android:textColor="@color/imgBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>


    <RelativeLayout
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:id="@+id/fragment_layout"
        android:background="@drawable/fragment_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/imgBar"
            android:paddingLeft="@dimen/left"
            android:layout_centerVertical="true"
            android:id="@+id/fragment_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            />
        <ImageView
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:id="@+id/fragment_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/search_pic"
            android:layout_alignParentRight="true"
           />

    </RelativeLayout>



    <RelativeLayout
        android:gravity="center"
        android:id="@+id/searweb_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/search_net"
            android:drawableTop="@mipmap/intent_net"
            android:gravity="center"
            android:drawablePadding="@dimen/playbtn"
            android:textColor="@color/imgBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sear_wz"/>


        <TextView
            android:id="@+id/search_zx"
            android:layout_toRightOf="@+id/search_net"
            android:drawableTop="@mipmap/redi"
            android:gravity="center"
            android:drawablePadding="@dimen/playbtn"
            android:textColor="@color/imgBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sear_ssrx"/>

        <TextView
            android:layout_toRightOf="@+id/search_zx"
            android:id="@+id/search_bd"
            android:drawableTop="@mipmap/baidu_lo"
            android:gravity="center"
            android:drawablePadding="@dimen/playbtn"
            android:textColor="@color/imgBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sear_db"/>

        <TextView
            android:layout_toRightOf="@+id/search_bd"
            android:id="@+id/search_video"
            android:drawableTop="@mipmap/video_los"
            android:gravity="center"
            android:drawablePadding="@dimen/playbtn"
            android:textColor="@color/imgBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sear_video"/>


    </RelativeLayout>


</LinearLayout>