<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <zd.cn.novipvideo.view.ImageTitleBar
        android:id="@+id/title_bar_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </zd.cn.novipvideo.view.ImageTitleBar>

    <RelativeLayout
        android:id="@+id/account_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/imgBar">

        <ImageView
            android:id="@+id/account_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/user" />

        <TextView
            android:id="@+id/account_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/account_img"
            android:gravity="center_vertical"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:clickable="true"
            android:background="@drawable/layout_style"
            android:id="@+id/account_line_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/account_line_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/new_yd"
                android:textColor="@color/titleBar" />

            <ImageView
                android:id="@+id/account_line_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/right_back" />
        </RelativeLayout>


        <RelativeLayout
            android:clickable="true"
            android:background="@drawable/layout_style"
            android:id="@+id/account_line1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/account_line1_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/abount"
                android:textColor="@color/titleBar" />

            <ImageView
                android:id="@+id/account_line1_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/right_back" />
        </RelativeLayout>


        <RelativeLayout
            android:visibility="gone"
            android:clickable="true"
            android:background="@drawable/layout_style"
            android:id="@+id/account_line2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/account_line2_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="@string/share"
                android:textColor="@color/titleBar" />

            <ImageView
                android:id="@+id/account_line2_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/right_back" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:background="@drawable/login_out"
        android:textColor="@color/white"
        android:text="@string/login_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_out"/>


</LinearLayout>